# temporal-heterogeneous-graph-kt

./: .gitignore  README.md  pyproject.toml  run_project.py
artifacts/ednet20k_suite_smoke_verify/: run_project_summary.json
artifacts/ednet_1k_seed_suite/: run_project_summary.json
artifacts/ednet_20k_suite/: run_project_summary.json
artifacts/ednet_fixture_after_sequence_refactor/: run_project_summary.json
artifacts/ednet_kt1_run/: run_project_summary.json
artifacts/final_project_run/: run_project_summary.json
artifacts/final_project_run_terminal_verify/: run_project_summary.json
configs/: baseline_toy.yaml  default.yaml  ednet_fixture.yaml  ednet_kt1.yaml  relation_modes.yaml  schema.yaml  thgkt_toy.yaml
configs/ednet_20k/: dkt_baseline.json  graph_only.json  thgkt_full.json  (+4 more)
docs/: 01_PROJECT_SPECIFICATION.md  02_CANONICAL_SCHEMA_AND_INTERFACES.md  03_IMPLEMENTATION_WORKFLOW.md
scripts/: build_user_tag_map.py  compare_runs.py  download_ednet.py  plot_run.py  resume_run_project.py  run_ednet_1k_seed_suite.py  run_experiment.py  run_phase12_suite.py
tests/: conftest.py  test_ednet_adapter.py  test_phase0_scaffolding.py  test_phase10_relation_modes.py  test_phase11_explainability.py  test_phase12_reproducibility.py  test_phase1_schema.py  test_phase2_synthetic_adapter.py  test_phase3_assistments_adapter.py  test_phase4_preprocessing_and_splitting.py  test_phase5_graph_builder.py  test_phase6_sequence_builder.py  test_phase7_baselines.py  test_phase8_training_framework.py  test_phase9_thgkt_model.py  test_run_ednet_1k_seed_suite.py  test_user_tag_map.py
(+818 files in other folders)
